# kmer_phylogeny_sensitivity

./: README.md
generate_visuals/: gen_phylogenetic_tree.py  histogram_of_kmers.py
raw_read_analysis/build_phylogenies/: build_dendro_and_newick.py
raw_read_analysis/calculate_cosine_distance/: batch_cos_dist_w_gpus.sh
raw_read_analysis/calculate_euclidean_distance/: batch_euclid_dist_w_gpus.sh
raw_read_analysis/compare_phylogenies/: batch_RF_scores.sh  calculate_Robinson_Foulds_scores.py
raw_read_analysis/gen_kmer_profiles/: batch_gen_kmer_profiles.sh  gen_kmer_profiles.py
raw_read_analysis/intersection_of_kmers/: batch_intersection_of_kmers.sh  parallel_intersection_of_kmers.py
raw_read_analysis/plot_RF_scores/: batch_statistics.sh  batch_violin_plots.sh  calc_RF_scores_statistics.py  violin_plot_RF_scores.py
raw_read_analysis/sort_kmer_profiles/: batch_sort_kmers.sh  sort_kmers.sh
wgs_analysis/calculate_cosine_distance_step_5/with_Rust/kmer_cos_dis_Rust/: Cargo.toml
wgs_analysis/calculate_cosine_distance_step_5/with_Rust/kmer_cos_dis_Rust/input_files/4_mers_0.001_sim_1/: intersection_a_4mer_profile_sorted_b_4mer_profile_sorted.txt
wgs_analysis/calculate_cosine_distance_step_5/with_Rust/kmer_cos_dis_Rust/src/: lib.rs  string.rs
wgs_simulation/: how_to_slurm_wgs_mut  mult_mut_rates_0.001_100_simulations.sh  mult_mut_rates_0.01_100_simulations.sh  mult_mut_rates_0.1_100_simulations.sh  mult_mut_rates_1.0_100_simulations.sh  mult_mut_rates_10.0_100_simulations.sh  steps_to_wgs_simulation  wgs_mut_slurm_job_submit.slurm
(+221 files in other folders)
